[tool.poetry]
name = "counter.gg"
version = "0.1.0"
description = "It's a discord bot for LoL players"
authors = ["andreacoppari <andrea.coppari@proton.me>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
requests = "^2.27.1"
Flask = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
